<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CryptocurrencyActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center">

        <TextView
            android:id="@+id/hyggeligLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hyggelig"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:textSize="56px" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center">

        <EditText
            android:id="@+id/blockchain_addr_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_blockchain_address"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Button
            android:id="@+id/blockchain_addr_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#039BE5"
            android:onClick="getAddressBalance"
            android:text="@string/show_blockchain_addr_balance"
            android:textColor="#FFFFFF" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/addr_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#039BE5"
            android:textSize="36sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center">

        <EditText
            android:id="@+id/new_addr_label_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_label_hint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Button
            android:id="@+id/new_addr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#039BE5"
            android:onClick="generateNewAddress"
            android:text="@string/new_addr_button_text"
            android:textColor="#FFFFFF" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:scrollHorizontally="true"
            android:textColor="@android:color/holo_blue_dark"
            android:textIsSelectable="true"
            android:textSize="36sp"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>